# AI-Authenticity-Detector

./: README.md  app.py  authenticator_v3_pro.h5  predict_v3.py  prepare_data.py  pyproject.toml  render.yaml  requirements.txt  train_model_v3_professional.py
