[tool.poetry]
name = "ai-authenticity-detector"
version = "0.1.0"
description = "A Streamlit app to detect AI-generated images."
authors = ["Vijay Chethula <vijayakrishnachetula@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"  # We are specifying a Python version known for stability
streamlit = "^1.33.0"
tensorflow-cpu = "2.13.0" # Using a known stable version of tensorflow-cpu
Pillow = "^10.3.0"
PyMuPDF = "^1.24.1"
numpy = "1.24.4" # Explicitly pinning numpy to match tensorflow's needs

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"